# Minchodan

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Directory_Structure.md  README.md  SCRIPT_GENERATION_PROMPT.md  SKILLS.md  opencode.json  project_scan_report.md  project_scan_summary.json  project_scan_verification.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills.md
.agents/skills/camera-frame-capture/: SKILL.md
.agents/skills/llm-guidance-orchestrator/: SKILL.md
.agents/skills/rag-knowledge-builder/: SKILL.md
.agents/skills/rag-realtime-search/: SKILL.md
.agents/skills/tts-voice-streamer/: SKILL.md
.agents/skills/websocket-gateway/: SKILL.md
.github/workflows/: lint.yml
Docs/dg/: Dae-geun_README.md
Docs/jh/: Jin-hyung_README.md
Docs/jy/: Jun-young_README.md
Docs/kb/: Kwan-beom_README.md
Docs/th/: Tae-hyun_README.md
back/: BackEnd_README.md
client/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
client/src/config/: index.ts
dl/: DeepLearing_Model_README.md
dl/inference/: DL_Inference_README.md
dl/scripts/: DL_Scripts_README.md
dl/weights/: DL_Weights_README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml  linux_docker_start.sh  macos_docker_start.sh  windows_docker_start.bat
docs/: AGENTS.md  README.md  antigravity_agent_prompt__4_5_final.md  api_specification.md  architecture.md  behavior_and_risk_insight.md  code_quality_guide.md  course_codebase_guide.md  deployment_guide.md  dual_gemma4_latency_analysis.md  environment_variables.md  gemini_fallback_feasibility.md  git_branching_strategy.md  latency_impact_analysis.md  llm_collaboration_workflow.md  minchodan_design_note.md  mobile_android_implementation_plan.md  mobile_app_implementation_plan.md  mobile_ios_implementation_plan.md  pipeline_stage_design.md  post_mvp_hybrid_roadmap.md  post_mvp_ondevice_feasibility.md  reflex_audio_specification.md  stage2_capture_design.md  stage3_detection_design.md  stage4_5_data_replacement_guide.md  stage4_5_directory_guide.md  stage4_5_implementation_log.md  stage4_5_rag_design.md  stage4_5_test_guide.md  stage6_orchestration_design.md  test_specification.md  yolo_tts_mvp_next_steps.md  신규_설계서_예시_2.md
docs/changelogs/: 2026-06-24_initial_baseline.md  2026-06-25_kb_3단계_detection_구현.md  2026-06-26_kb_YOLO26n_연산_검증_및_통합_테스트.md  README.md  TEMPLATE.md  dg.md  initial.md  jh.md  jy.md  kb.md  th.md
front/: FrontEnd_README.md
scripts/: bench_ondevice.py  convert_aihub_seg_to_yolo.py  download_pretrained_weights.py  export_mobile.py  export_tflite.py  inspect_aihub_bbox_xml.py  integration_test_pipeline.py  postwork.bat  postwork.ps1  postwork.sh  prepare_aihub_yolo_detection.py  prework.bat  prework.ps1  prework.sh  project_scan.py  run_desktop_full_training.py  run_yolo_tts_demo.py  scan_aihub_walk_dataset.py  slack_publisher.py  verify_gpu.py  verify_pretrained_weights.py
server/: main.py
server/api/: __init__.py  auth.py  config.py  heartbeat.py  monitor.py  schemas.py  session_manager.py  ws_router.py
server/bus/: __init__.py  producer.py  redis_client.py
server/capture/: __init__.py  frame_decoder.py  stream_splitter.py
server/detection/: __init__.py  bytetrack_tracker.py  config.py  consumer.py  detection_pipeline.py  detector_interface.py  direction.py  mock_detector.py  risk_rules.py  schemas.py  yolo_code_review.md  yolo_detector.py  yolo_segmentor.py
server/mcp/: gpu_monitor.py  manager.py
server/orchestration/: __init__.py  graph.py  llm_client_factory.py  state.py
server/rag/: embedding_engine_factory.py  fallback.py  retriever.py  vector_db_factory.py
tests/: test_api_ws.py  test_db_builder.py  test_dedup_phash.py  test_detection.py  test_e2e_pipeline.py  test_embedding_engine_factory.py  test_fallback.py  test_frame_decode.py  test_frame_extractor.py  test_gemini_captioner.py  test_langgraph.py  test_mcp_gpu.py  test_mcp_integration.py  test_retriever.py  test_vector_db_factory.py  test_ws_echo.py
training/: train_common.py  train_detection.py  train_segmentation.py
training/configs/: aihub_yolo_segmentation.yaml
yolo11n.mlpackage/: Manifest.json
yolov8n.mlpackage/: Manifest.json
(+42 files in other folders)
